--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif; 
+  color: #1d1d1d;
+  max-width: 1225px;
+  margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5, h6, .custom-title 
+  font-family: 'Inter Tight', sans-serif; 
+  font-size: 48px; 
+  font-weight:600;
+  max-width: 564px;
+}
+
+input, select{
+    padding: 10px;
+    height: 54px;
+}
+
+label{
+    font-size: 16px;
+    padding-bottom: 14px;
+}
+.field{
+    max-width: 498px;
+    height: 86px;
 }
