--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@ body {
   margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5, h6, .custom-title 
+h1, h2, h3, h4, h5, h6, .custom-title {
   font-family: 'Inter Tight', sans-serif; 
   font-size: 48px; 
   font-weight:600;
